header and nav style in the menu project

--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div id="container">
-        <div id="nav"></div>
+        <header id="header">
+            <img src="img/cafebanner.jpg" alt="">
+        </header>
+        <div id="nav">
+            <a href="#">MENU</a>  |
+			<a href="https://www.cafeculture.com/">CAFE CULTURE</a>  |
+			<a href="#">CAFE NEWS</a> 
+        </div>
         <div id="main">
             <div id="aside"></div>
             <div id="content"></div>
