updte the menu project css styling

--- a/menu.html
+++ b/menu.html
@@ -62,7 +62,9 @@
                     </div>
             </div>
         </div>
-        <div id="footer"></div>
+        <div id="footer">
+            <p>&copy2021:STARBUCK</p>
+        </div>
     </div>
 </body>
 </html>
