create the contact project html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 
 <body>
-
     <nav id="navbar">
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
-        <a href="skills.html">Skills</a>
+        <a href="about.html">Skills</a>
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -66,6 +65,7 @@
         <a href="https://mail.google.com/mail/u/1/#inbox"><img src="img/email.jpg" alt="icon"></a>
         <a href="https://github.com/winny1212/practice_git"><img src="img/github.jpg" alt="icon"></a>
         <a href="https://www.facebook.com/"><img src="img/facebook.jpg" alt="icon"></a>
+        <a href="https://www.linkedin.com/feed/"><img src="img/linkedin.jpg" alt="icon"></a>
         
 
     </section>
