--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
                         rule specifies the animation
                         <p>
                      <a href="rose.html">View web</a>
-                     <a href="">View Github repo</a>
+                     <a href="https://github.com/winny1212/firstproject">View Github repo</a>
                 </div>
             </div>
         </div>
@@ -44,7 +44,7 @@
                 <div class="col-s-6">
                     <p>This page shows cafe menu.semantic HTML elements and attributes </p>
                     <a href="about.html">View web</a>
-                    <a href="">View Github repo</a>
+                    <a href="https://github.com/winny1212/firstproject">View Github repo</a>
                 </div>
            </div>
         </div>
@@ -58,8 +58,8 @@
                    <p>This page shows my portfolio and also for my school term1 assignment.</p>
                     <p>I enjoy applicate the HTML,CSS elements and project deployment here.
                     </p>
-                    <a href="">View here</a>
-                    <a href="">View Github repo</a>
+                    <a href="menu.html">View here</a>
+                    <a href="https://github.com/winny1212/firstproject">View Github repo</a>
                </div>
             </div>
         </div>
