finish html and style it of the contact menu

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <title>Contact Page</title>
     <link rel="stylesheet" href="contact.css">
 </head>
+
 <body>
+    <!-- navbar for link to other html files -->
     <nav id="navbar">
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
@@ -15,24 +18,35 @@
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>
     </nav>
+    <!-- section for social site -->
     <section id="contact">
         <h2>CONTACT</h2>
         <a href="https://mail.google.com/mail/u/1/#inbox"><img src="img/email.jpg" alt="icon"></a>
         <a href="https://github.com/winny1212/practice_git"><img src="img/github.jpg" alt="icon"></a>
         <a href="https://www.facebook.com/"><img src="img/facebook.jpg" alt="icon"></a>
         <a href="https://www.linkedin.com/feed/"><img src="img/linkedin.jpg" alt="icon"></a>
-     </section>
-     <section id="form">
-         <h2>OR LEAVE YOUR MESSAGE HERE</h2>
-         <form action="">
-             <label for="name">Name:</label><br>
-             <input id="name" name="type name" type="text" placeholder="Enter your name"><br>
-             <label for="email">Email:</label><br>
-             <input id="email" name="type email" type="text" placeholder="example@email.com"><br>
-             <label for="message">Message:</label>
-             <input id="message" name="type message" type="text" placeholder="Leave message here"><br>
-             <button type="submit">Submit</button>
-            </form>
-     </section>
+    </section>
+    <!-- section form for visitors who want to contact you -->
+    <section id="form">
+        <h2>OR LEAVE YOUR MESSAGE HERE:</h2>
+        <form id="content" action="">
+            <div class="subform">
+                <label for="name">Name:</label><br>
+                <input id="name" name="type name" type="text" placeholder="Enter your name"><br>
+            </div>
+            <div class="subform">
+                <label for="email">Email:</label><br>
+                <input id="email" name="type email" type="text" placeholder="example@email.com"><br>
+            </div>
+            <div class="subform">
+                <label for="message">Message:</label><br>
+                <input id="message" name="type message" type="text" placeholder="message......"><br>
+            </div>
+            <div class="subform">
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+    </section>
 </body>
+
 </html>
