add responsive media queries to the contact style document

--- a/contact.html
+++ b/contact.html
@@ -10,43 +10,44 @@
 </head>
 
 <body>
-    <!-- navbar for link to other html files -->
-    <nav id="navbar">
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="about.html">Skills</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    <!-- section for social site -->
-    <section id="contact">
-        <h2>CONTACT</h2>
-        <a href="https://mail.google.com/mail/u/1/#inbox"><img src="img/email.jpg" alt="icon"></a>
-        <a href="https://github.com/winny1212/practice_git"><img src="img/github.jpg" alt="icon"></a>
-        <a href="https://www.facebook.com/"><img src="img/facebook.jpg" alt="icon"></a>
-        <a href="https://www.linkedin.com/feed/"><img src="img/linkedin.jpg" alt="icon"></a>
-    </section>
-    <!-- section form for visitors who want to contact you -->
-    <section id="form">
-        <h2>OR LEAVE YOUR MESSAGE HERE:</h2>
-        <form id="content" action="">
-            <div class="subform">
-                <label for="name">Name:</label><br>
-                <input id="name" name="type name" type="text" placeholder="Enter your name"><br>
-            </div>
-            <div class="subform">
-                <label for="email">Email:</label><br>
-                <input id="email" name="type email" type="text" placeholder="example@email.com"><br>
-            </div>
-            <div class="subform">
-                <label for="message">Message:</label><br>
-                <input id="message" name="type message" type="text" placeholder="message......"><br>
-            </div>
-            <div class="subform">
-                <button type="submit">Submit</button>
-            </div>
-        </form>
-    </section>
-</body>
-
+    <div id="main">
+        <!-- navbar for link to other html files -->
+        <nav id="navbar">
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="about.html">Skills</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+        <!-- section for social site -->
+        <section id="contact">
+            <h2>CONTACT</h2>
+            <a href="https://mail.google.com/mail/u/1/#inbox"><img src="img/email.jpg" alt="icon"></a>
+            <a href="https://github.com/winny1212/practice_git"><img src="img/github.jpg" alt="icon"></a>
+            <a href="https://www.facebook.com/"><img src="img/facebook.jpg" alt="icon"></a>
+            <a href="https://www.linkedin.com/feed/"><img src="img/linkedin.jpg" alt="icon"></a>
+        </section>
+        <!-- section form for visitors who want to contact you -->
+        <section id="form">
+            <h2>OR LEAVE YOUR MESSAGE HERE:</h2>
+            <form id="content" action="">
+                <div class="subform">
+                    <label for="name">Name:</label><br>
+                    <input id="name" name="type name" type="text" placeholder="Enter your name"><br>
+                </div>
+                <div class="subform">
+                    <label for="email">Email:</label><br>
+                    <input id="email" name="type email" type="text" placeholder="example@email.com"><br>
+                </div>
+                <div class="subform">
+                    <label for="message">Message:</label><br>
+                    <input id="message" name="type message" type="text" placeholder="message......"><br>
+                </div>
+                <div class="subform">
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+        </section>
+    </div>
+ </body>
 </html>
