style the home page

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                     <input id="message" name="type message" type="text" placeholder="message......"><br>
                 </div>
                 <div class="subform">
-                    <button type="submit">Submit</button>
+                    <button type="submit">Send</button>
                 </div>
             </form>
         </section>
