add the contact icon and flex them in the home page

--- a/home.html
+++ b/home.html
@@ -21,8 +21,8 @@
     <aside id="contact">
         <a href="https://mail.google.com/mail/u/1/#inbox"><img src="img/email.jpg" alt="icon"></a>
         <a href="https://github.com/winny1212/practice_git"><img src="img/github.jpg" alt="icon"></a>
-        <a href="https://www.facebook.com/"><img src="img/facebook.jpg" alt="icon"></a>
-        <a href="https://www.linkedin.com/feed/"><img src="img/linkedin.jpg" alt="icon"></a>
+        <a href="https://www.facebook.com/"><img src="img/facebookbla.jpg" alt="icon"></a>
+        <a href="https://www.linkedin.com/feed/"><img src="img/linkbla.jpg" alt="icon"></a>
     </aside>
     <main id="content">
         <h1>Hi, I am WINNY!</h1>
