update the about page and its css

--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
     <div id="main">
         <!-- navbar for link to other html files -->
         <nav id="navbar">
-            <a href="index.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="projects.html">Projects</a>
-            <a href="about.html">Skills</a>
+            <a href="about.html">About</a>
             <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -29,7 +29,7 @@
         </section>
         <!-- section form for visitors who want to contact you -->
         <section id="form">
-            <h2>OR LEAVE YOUR MESSAGE HERE:</h2>
+            <p>Thanks for your visting. If you have any questions, please feel free to reach out on my socials or leave your message below.😊</p>
             <form id="content" action="">
                 <div class="subform">
                     <label for="name">Name:</label><br>
