--- a/home.html
+++ b/home.html
@@ -12,26 +12,29 @@
 <body>
     <!-- navbar for enter other pages section -->
     <nav id="navbar">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="projects.html">Projects</a>
-        <a href="about.html">Skills</a>
+        <a href="about.html">About</a>
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>
     </nav>
+    <!-- conatct icon -->
     <aside id="contact">
         <a href="https://mail.google.com/mail/u/1/#inbox"><img src="img/email.jpg" alt="icon"></a>
         <a href="https://github.com/winny1212/practice_git"><img src="img/github.jpg" alt="icon"></a>
         <a href="https://www.facebook.com/"><img src="img/facebookbla.jpg" alt="icon"></a>
         <a href="https://www.linkedin.com/feed/"><img src="img/linkbla.jpg" alt="icon"></a>
     </aside>
+    <!-- content -->
     <main id="content">
         <h1>Hi, I am WINNY!</h1>
         <h3>A WEB DEVELOPER!</h3>
         <div id="link">
-           <a href="">Resume</a>
+           <a href="resume.pdf">Resume</a>
            <a href="about.html">View More</a>
         </div>
     </main>
+    <!-- copyright -->
     <footer id="foot">
         <P>&copy2021 winny</P>
     </footer> 
