--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
 <body>
     <!-- navbar for enter other pages section -->
     <nav id="navbar">
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
+        <a href="home.html">Home</a>
         <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>
     </nav>
