--- a/projects.html
+++ b/projects.html
@@ -11,9 +11,9 @@
 
 <body>
     <nav id="navbar">
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
+        <a href="home.html">Home</a>
         <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -42,7 +42,7 @@
                    <img src="img/background.jpg" alt="background">
                 </div>
                 <div class="col-s-6">
-                    <p>This page shows cafe menu.semantic HTML elements and attributes </p>
+                    <p>This page shows my portfolio and also for term1 assignment.I enjoy applicate the HTML,CSS elements and project deployment here.</p>
                     <a href="about.html">View web</a>
                     <a href="https://github.com/winny1212/firstproject">View Github repo</a>
                 </div>
@@ -55,9 +55,7 @@
                     <img src="img/project2.jpg" alt="project">
                 </div>
                 <div class="col-s-6">
-                   <p>This page shows my portfolio and also for my school term1 assignment.</p>
-                    <p>I enjoy applicate the HTML,CSS elements and project deployment here.
-                    </p>
+                   <p>This page shows cafe menu by using semantic HTML elements and attributes. </p>
                     <a href="menu.html">View here</a>
                     <a href="https://github.com/winny1212/firstproject">View Github repo</a>
                </div>
