--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,8 @@
 <body>
     <nav id="navbar">
         <a href="#">Home</a>
+        <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
-        <a href="skills.html">Skills</a>
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>
     </nav>
