--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <a href="#">Home</a>
+        <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
         <a href="blog.html">Blog</a>
