add resume file

--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- navbar section -->
     <nav id="navbar">
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
@@ -18,6 +19,7 @@
         <a href="contact.html">Contact</a>
     </nav>
     <section id="projects">
+         <!-- project1 -->
         <h1>PROJECTS</h1>
         <div class="project">
             <h2>The heart-shaped rose keeps zooming in</h2>
@@ -35,6 +37,7 @@
                 </div>
             </div>
         </div>
+         <!-- project2 -->
         <div class="project">
            <h2>Personal Portfolio</h2>
            <div class="container">
@@ -48,6 +51,7 @@
                 </div>
            </div>
         </div>
+         <!-- project3 -->
         <div class="project">
             <h2>Cafe menu</h2>
             <div class="container">
