--- a/rose.html
+++ b/rose.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="rose.css">
 </head>
 <body>
+    <!-- main section -->
     <div class="container col-s-4 col-3">
         <img class="flower1" src="img/rose.jpg" alt="#">
         <img class="flower2" src="img/rose.jpg" alt="#">
