add SRI to html documents

--- a/about.html
+++ b/about.html
@@ -22,7 +22,8 @@
     <section id="content">
         <h1 id="name">Hi, I am winny!</h1>
         <div class="introduction">
-            <img src="img/profile.jpg" alt="profile.jpg">
+            <img src="img/profile.jpg" alt="profile.jpg" integrity="gI+e3Iurlml3LvYBaHoW+6hiJz5ObijOB226hamn0kw=192-168-1-2">
+            
             <div id="about1">
                 <h2>Welcome to my portfolio!</h2>
                 <a href="resume.pdf">Resume</a>
