--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog</title>
-    <link rel="stylesheet" href="blog.css">
+    <link rel="stylesheet" href="blog.css" integrity="7G1xDA0IMQobL08YVEH7mXePGhsq7T+BD3Khp5yLL4s=192-168-1-2">
 </head>
 <body>
+   <!-- navbar -->
     <nav id="navbar">
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
@@ -15,10 +16,12 @@
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>
     </nav>
+    <!-- heqader -->
     <header id="head">
       <img src="img/dog.jpg" alt="">
     </header>
     <hr>
+    <!-- blog1 -->
     <section class="intro">
         <h1>Blog 1:Golden Retriever</h1>
         <h6>Published 13/04/2021</h6>
@@ -31,6 +34,7 @@
            </main>
        </div>
     </section>
+    <!-- blog2 -->
     <section class="intro">
         <h1>Blog 2:Poodle</h1>
         <h6>Published 14/04/2021</h6>
@@ -44,6 +48,7 @@
            </main>
        </div>
     </section>
+    <!-- blog3 -->
     <section class="intro">
         <h1>Blog 3:Husky</h1>
         <h6>Published 14/04/2021</h6>
@@ -56,6 +61,7 @@
            </main>
        </div>
     </section>
+    <!-- blog4 -->
     <section class="intro">
         <h1>Blog 4:Border Collie</h1>
         <h6>Published 15/04/2021</h6>
@@ -68,6 +74,7 @@
            </main>
        </div>
     </section>
+    <!-- blog5 -->
     <section class="intro">
         <h1>Blog 5:Samoyed</h1>
         <h6>Published 16/04/2021</h6>
