--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="contact.css" integrity="5CdwIltZi5OKeoroZcTnylGPM54M8+s35D0iHOucaII=192-168-1-2">
 </head>
 
 <body>
