--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="home.css" integrity="">
+    <link rel="stylesheet" href="home.css" integrity="VgJh7lU6j7VQhrajbHVU8ksYAlh50woIaGHoHPUjp0w=192-168-1-2">
 </head>
 
 <body>
