--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="projects.css" integrity="7hZKCvnOdV07oiROhLZz1+MkyzWvzffnTFV+hMYjNyg=192-168-1-2">
 </head>
 
 <body>
