--- a/menu.html
+++ b/menu.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cafe menu</title>
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="menu.css" integrity="+eqNKtKbE2TSbMpMVXPBqYLevTgP/WBle7163dEw1Y8=192-168-1-2">
 </head>
 <body>
     <div id="container">
+        <!-- header -->
         <header id="header">
             <img src="img/cafebanner.jpg" alt="">
         </header>
+        <!-- navbar -->
         <div id="nav">
             <a href="#">MENU</a>  |
 			<a href="https://www.cafeculture.com/">CAFE CULTURE</a>  |
 			<a href="#">CAFE NEWS</a> 
         </div>
+        <!-- main -->
+        <!-- cafe content -->
         <div id="main">
             <div id="aside">
                 <div id="aside1">
