--- a/rose.html
+++ b/rose.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROSE</title>
-    <link rel="stylesheet" href="rose.css">
+    <link rel="stylesheet" href="rose.css" integrity="OTbZ4f/ttaWVKpWzlTA/+x0jev1pHxWVVcZLEE3UpGM=192-168-1-2">
 </head>
 <body>
     <!-- main section -->
