--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                     <div class="intro-paragraph">
                         <p>My name is Winny. I am currently studying my <span>Full-stack Web Development bootcamp</span> at Coder Academy and will graduate soon! </p>
                         <p><span>Writing code can be addictive, just like playing a game.</span> For me, I really enjoy the process of transferring code into components or apps. As the pay and harvest cycle is very short, I can always feel happy during the working. Now, with the help of Coder Academy, I'm really very exited as I'm able to make it my career!</p>
-                        <p>Prior to getting a start in web development, I was a <span>finaical advisor</span> for about three years and three part-time dog groomer. As a financial advisor, I like to keep learning the latest news and then analyse their effect on the investment. </p>
+                        <p>Prior to getting a start in web development, I was a <span>finaical advisor</span> for about three years as well as three part-time dog groomer. As a financial advisor, I like to keep learning the latest news and then analyse their effect on the investment. </p>
                         <p>One of my greatest loves is staying with dogs, I think they like angles. Always leep smiling,loyalty and friendly. So in my free time, I like to go hiking with my dog or join the dogs' party. </p>
                         <p>If you have any questions, or just want to say hello, please feel free to ...... </p> 
                     </div>
