add another project,animation text style,wiggle icon on contact page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" integrity="sga384-5HRc9Btmx9FQDvJk+fYnxSGTUX99H/NZ6VNAc9frOND1J6oPLcfcIW6usKYNqCJl">
+    <link rel="stylesheet" href="style.css" >
     <link href='https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&family=Ubuntu:wght@400;500;700&display=swap'
     rel="stylesheet">
     <!-- import favicon -->
@@ -43,7 +43,7 @@
                 <div class="max-width">
                     <div class="home-content">
                         <div class="text-1">Hello, I'm </div>
-                        <div class="text-2">Winny CHEN </div>
+                        <div class="text-2" id='text'> </div>
                         <div class="text-3">And I'm a <span>Web Developer</span> </div>
                         <a href="project.html">View My Work</a>
                     </div>
@@ -59,6 +59,19 @@
         </footer>
     
     </div>   
+
+    <script type="text/javascript">
+         let i=0;
+         let text = "Winny Chen"
+         function typing(){
+             if(i<text.length){
+                 document.getElementById('text').innerHTML += text.charAt(i);
+                 i++;
+                 setTimeout(typing,70);
+             }
+         }
+         typing();
+    </script>
 
 </body>
 </html>
