--- a/project.html
+++ b/project.html
@@ -60,19 +60,34 @@
                 <article class="projects">
                     <a href="#"><img src="images/project2.png" alt="project image 2"></a>
                     <div class="project-text">
-                        <a href="https://winny-portfolio.netlify.app/"><h2>Personal Portfolio</h2></a>
-                        <p>It is wensite for my personal portfolio, also my first full static website for the assignment. </p>
+                        <a href="https://winny-bitcoin-tracker.netlify.app/"><h2>Bitcoin Tracker</h2></a>
+                        <p>This app aims to show the daily price of currency in a latest month by line chart.</p>
                         <ul class="project-details">
-                            <li>It shows my projects and resume.</li>
-                            <li>It is implemented in <span>HTML, CSS, SASS</span>. I really enjoy it.</li>
-                            <li>Users can buy a dog.</li>
+                            <li>It is implemented in <span>React hooks as well as API integration.</span>. I really enjoy it.</li>
+                        
                             <li>My full stack project implemented by React and JS will come soon.</li>
                         </ul>
-                        <p>For more details please visit <a href="https://winny-portfolio.netlify.app/">website</a> & <a href="https://github.com/winny1212/Personal-Portfolio">github.</a></p>
+                        <p>For more details please visit <a href="https://winny-bitcoin-tracker.netlify.app/">website</a> & <a href="https://github.com/winny1212/react-bitcoin-tracker-practice">github.</a></p>
                     </div>
                 </article>
 
                 <!-- project 3 -->
+
+                <article class="projects">
+                    <a href="#"><img src="images/project31.png" alt="project image 31"></a>
+                    <div class="project-text">
+                        <a href="https://github.com/winny1212/hackathon_memeGenerator"><h2>MemeGenerator Games</h2></a>
+                        <p>A game application in which users can caption for the most popular pictures. </p>
+                        <ul class="project-details">
+                            <li>It is implemented in <span>Bootstrap,React hooks as well as API integration.</span>.</li>
+                            <li>Design NavBar & Different numbers of Captions & Design Carousel .</li>
+                            <li>Built with two other group members for campus hachathon, this app uses tWO APIs.</li>
+                        </ul>
+                        <p>For more details please visit <a href="https://github.com/winny1212/hackathon_memeGenerator">github.</a></p>
+                    </div>
+                </article>
+
+                <!-- project 4 -->
 
                 <article class="projects">
                     <a href="#"><img src="images/project3.png" alt="project image 3"></a>
