--- a/project.html
+++ b/project.html
@@ -81,7 +81,7 @@
                         <ul class="project-details">
                             <li>It is implemented in <span>Bootstrap,React hooks as well as API integration.</span>.</li>
                             <li>Design NavBar & Different numbers of Captions & Design Carousel .</li>
-                            <li>Built with two other group members for campus hachathon, this app uses tWO APIs.</li>
+                            <li>Built with two other group members for campus hackathon activity, this app uses two APIs.</li>
                         </ul>
                         <p>For more details please visit <a href="https://github.com/winny1212/hackathon_memeGenerator">github.</a></p>
                     </div>
