add social icon on the homepage

--- a/index.html
+++ b/index.html
@@ -44,8 +44,14 @@
                     <div class="home-content">
                         <div class="text-1">Hello, I'm </div>
                         <div class="text-2" id='text'> </div>
-                        <div class="text-3">And I'm a <span>Web Developer</span> </div>
-                        <a href="project.html">View My Work</a>
+                        <div class="text-3"> <span> A Full-Stack Web Developer</span> </div>
+                        
+                      <div class="home-link">      
+                        <a href="https://www.linkedin.com/in/winny-chen-28069020b/" target="_blank"><img class="home-social-icon" src="images/linkedin.png"></a>
+                        <a href="https://github.com/winny1212" target="_blank"><img
+                            class="home-social-icon" src="images/github-logo.png"></a>
+                        <a  href="project.html"><p id='view-my-work'>View My Work</p></a>
+                    
                     </div>
                 </div>
             </section>
