--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@
                 <a href="http://home-decor.herokuapp.com/"><img src="images/homepage.png" alt="project image 1"></a>
            
                 <div class="project-text">
-                    <a href="https://art-happy-dog.herokuapp.com/"><h2>Home Decor</h2></a>
+                    <a href="http://home-decor.herokuapp.com/"><h2>Home Decor</h2></a>
                     <p>Home Decor is an online shopping website for home decoration and accessories. </p>
                     <ul class="project-details">
                         <li>Users can browse/comment all products' details, add them to cart and get their order details.</li>
