--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" integrity="sha384-7wf4EbSr9YJrZOXcJo28cJ6Hm9gAXP+HhKTNEt3C3uxrIiIdgoGOxg3PTU2kK6Dz">
     <link href='https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&family=Ubuntu:wght@400;500;700&display=swap'
     rel="stylesheet">
     <!-- import favicon -->
